--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -1,5 +1,8 @@
 
 unset(CMAKE_RUNTIME_OUTPUT_DIRECTORY )
+unset(CMAKE_LIBRARY_OUTPUT_DIRECTORY )
+unset(CMAKE_ARCHIVE_OUTPUT_DIRECTORY )
+unset(CMAKE_PDB_OUTPUT_DIRECTORY )
 
 add_googletest(timing_tests
     DISCOVER_TESTS
