Preload library and test + fix to depth in storage for multiple depth == 0 entries

--- a/source/preload/CMakeLists.txt
+++ b/source/preload/CMakeLists.txt
@@ -43,3 +43,5 @@ build_library(
 
 install(TARGETS timemory-preload-shared timemory-preload-static
     DESTINATION ${TIMEMORY_INSTALL_LIBDIR})
+
+add_subdirectory(tests)
