--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,11 +4,13 @@ nav:
     - About: about.md
     - Features: features.md
     - Installation: installation.md
-    - Integrating: integrating.md
     - Components: components.md
-    - Getting Started: getting_started.md
-    - Customization: customization.md
-    - Roofline: roofline.md
+    - Getting Started:
+        - Overview: getting_started/overview.md
+        - Project Integration: getting_started/integrating.md
+        - Basics: getting_started/basics.md
+        - Custom Components: getting_started/custom_components.md
+        - Roofline: getting_started/roofline.md
     - Overhead: overhead.md
     - Doxygen: doxygen-docs/index.html
 
@@ -24,3 +26,9 @@ theme: cinder
 #theme: inspired
 #theme: cluster
 #theme: juice
+
+#markdown_extensions:
+#    - smarty
+#    - toc:
+#        permalink: True
+#        separator: "_"
