CMake updates + tim::mpi namespace + base.is_on_stack + details/settings.hpp + counted_object noop
- TIMEMORY_GPERF_COMPONENTS
- ability to use either gperftools tcmalloc or profiler exclusively

--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -5,6 +5,11 @@ project(TiMemory-CXX-Tuple-Example LANGUAGES C CXX)
 set(EXE_NAME test_cxx_tuple)
 set(COMPONENTS cxx compile-options papi threading analysis-tools extern-templates)
 
+option(USE_CALIPER "Enable caliper" ON)
+if(USE_CALIPER)
+    list(APPEND COMPONENTS caliper)
+endif()
+
 set(TiMemory_FIND_COMPONENTS_INTERFACE timemory-cxx-tuple-example)
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
 
