--- a/.travis.yml
+++ b/.travis.yml
@@ -273,16 +273,17 @@ install:
     - env
     - conda create -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow
     - source activate pyctest
-    - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis"
+    - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis --no-py"
     - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=Release ; fi
     - if [ -z "${USE_MPI}" ]; then ARGS="${ARGS} --no-mpi"; fi
-    - travis_wait 15 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=${BUILD_TYPE} -- -VV
-    - travis_wait 15 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=RelWithDebInfo --no-py --profile=cpu -- -VV
-    - travis_wait 15 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=Debug          --no-py --coverage -- -VV
-    # - travis_wait 20 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=RelWithDebInfo --profile=heap
+    - travis_wait 20 python ./pyctest-runner.py ${ARGS} --profile=cpu --extra-optimizations -- -VV
+    - travis_wait 20 python ./pyctest-runner.py ${ARGS} --coverage -- -VV
+    # - travis_wait 20 python ./pyctest-runner.py ${ARGS} --profile=heap
 
 script:
-    - python setup.py install -- -DTIMEMORY_BUILD_C=OFF -DTIMEMORY_BUILD_TOOLS=OFF
+    - eval "${MATRIX_EVAL}"
+    - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=Release ; fi
+    - python setup.py install --build-type=${BUILD_TYPE} -- -DTIMEMORY_BUILD_C=OFF -DTIMEMORY_BUILD_TOOLS=OFF
     - python -c "import timemory; print(timemory.__file__)"
     - echo "python${TRAVIS_PYTHON_VERSION} testing -- Done"
 
