Caliper example + caliper attribute/channel customization

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(ex-cxx-tuple)
 add_subdirectory(ex-cxx-overhead)
 add_subdirectory(ex-cpu-roofline)
 add_subdirectory(ex-cuda-event)
+add_subdirectory(ex-caliper)
