--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -1,3 +1,5 @@
+# use IN_LIST so this is required
+cmake_minimum_required(VERSION 3.3 FATAL_ERROR)
 
 # cmake_policy(SET CMP0057 NEW)
 
@@ -84,6 +86,11 @@ if(TIMEMORY_INSTALL_TREE)
     foreach(_TYPE LIB INCLUDE PYTHON)
         set(@PROJECT_NAME@_${_TYPE}_DIRS ${@PROJECT_NAME@_${_TYPE}_DIR})
     endforeach()
+
+    set(caliper_DIR "@caliper_DIR@")
+    if(NOT "${caliper_DIR}" STREQUAL "")
+        find_package(caliper QUIET)
+    endif()
 
     include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@LibraryDepends.cmake)
     check_required_components(@PROJECT_NAME@)
