google tests for PAPI_SP_OPS, PAPI_DP_OPS, PAPI_LST_INS using papi_tuple and papi_array

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -15,3 +15,8 @@ add_googletest(rusage_tests
     SOURCES         rusage_tests.cpp
     LINK_LIBRARIES  timemory-headers
 )
+
+add_googletest(papi_tests
+    DISCOVER_TESTS
+    SOURCES         papi_tests.cpp
+    LINK_LIBRARIES  timemory-headers timemory-papi)
