--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -48,6 +48,32 @@ if(@PROJECT_NAME@_LANGUAGE_STANDARDS)
     set(CMAKE_CUDA_EXTENSIONS @CMAKE_CUDA_EXTENSIONS@ CACHE BOOL "")
 endif()
 
+set(@PROJECT_NAME@_ONETIME_MESSAGE ON CACHE BOOL "Onetime message")
+if(@PROJECT_NAME@_ONETIME_MESSAGE)
+    if(NOT @PROJECT_NAME@_FIND_QUIETLY)
+        set(_ENABLED ${@PROJECT_NAME@_INTERFACE_LIBRARIES})
+        set(_DISABLED ${@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES})
+        # foreach(_LIB ${_ENABLED})
+        #     if(${_LIB} IN_LIST _DISABLED)
+        #         list(REMOVE_ITEM _ENABLED ${_LIB})
+        #     endif()
+        # endforeach()
+        # message(STATUS "")
+        # message(STATUS "@PROJECT_NAME@ has the following INTERFACE libraries enabled:")
+        # foreach(_LIB ${_ENABLED})
+        #     message(STATUS "    ${_LIB}")
+        # endforeach()
+        message(STATUS "")
+        message(STATUS "@PROJECT_NAME@ was not compiled with support for the following INTERFACE libraries (empty INTERFACE targets):")
+        foreach(_LIB ${_DISABLED})
+            message(STATUS "    ${_LIB}")
+        endforeach()
+    endif()
+    set(@PROJECT_NAME@_ONETIME_MESSAGE OFF CACHE BOOL "Onetime message" FORCE)
+    unset(_DISABLED)
+    unset(_ENABLED)
+endif()
+
 # languages
 set(TIMEMORY_LANGUAGES CXX)
 
