--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries(libpytimemory PUBLIC
     timemory-cudart
     timemory-cudart-device
     timemory-python-compile-options
+    timemory-caliper
     PRIVATE pybind11::module)
 
 if(TIMEMORY_USE_CUDA)
