--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,5 +18,6 @@ add_subdirectory(ex-cxx-basic)
 add_subdirectory(ex-cxx-tuple)
 add_subdirectory(ex-cxx-overhead)
 add_subdirectory(ex-cpu-roofline)
+add_subdirectory(ex-gpu-roofline)
 add_subdirectory(ex-cuda-event)
 add_subdirectory(ex-caliper)
