GPU roofline + variadic CPU roofline + ERT configuration
- google-test-debug-options
- cpu_roofline supports multiple types
- migrated settings to common place
- fully support multiple devices
- paired cpu + gpu ERT
- roofline plotting improvements

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -297,13 +297,13 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "" AND TIMEMORY_BUILD_INTERF
                  set(_CUDART ON)
             endif()
 
-            if(_CUDART AND _CUDART_DEV)
-                set(_MSG "Requesting linking to cudadevrt (device runtime) and")
-                set(_MSG "${_MSG} cudart/cudart_static. This has been found to cause")
-                set(_MSG "${_MSG} compilation error in CUDA 10.1")
-                message(AUTHOR_WARNING "${_MSG}")
-                unset(_MSG)
-            endif()
+            #if(_CUDART AND _CUDART_DEV)
+            #    set(_MSG "Requesting linking to cudadevrt (device runtime) and")
+            #    set(_MSG "${_MSG} cudart/cudart_static. This has been found to cause")
+            #    set(_MSG "${_MSG} compilation error in CUDA 10.1")
+            #    message(AUTHOR_WARNING "${_MSG}")
+            #    unset(_MSG)
+            #endif()
 
             if(_CUDART)
                 if("${_LINK}" STREQUAL "static")
