--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -42,20 +42,6 @@ if(TIMEMORY_BUILD_TOOLS_LIBEXPECT)
 endif()
 
 #----------------------------------------------------------------------------------------#
-# PAPI interface library with static linkage if possible
-#
-add_library(timem-papi INTERFACE)
-if(PAPI_FOUND)
-    #target_compile_definitions(timem-papi INTERFACE TIMEMORY_USE_PAPI)
-    #target_include_directories(timem-papi INTERFACE ${PAPI_INCLUDE_DIRS})
-    #if(TARGET timemory-papi-static)
-    #    target_link_libraries(timem-papi INTERFACE timemory-papi-static)
-    #else()
-        target_link_libraries(timem-papi INTERFACE timemory-papi)
-    #endif()
-endif()
-
-#----------------------------------------------------------------------------------------#
 # Build, link, and install exe
 #
 add_executable(timem timem.cpp)
@@ -65,12 +51,8 @@ target_link_libraries(timem PRIVATE
     timemory-arch
     timemory-vector
     timemory-headers
-    timemory-cxx-static
-    timem-papi
+    timemory-papi
     timem-libexplain)
-
-#set_target_properties(timem PROPERTIES POSITION_INDEPENDENT_CODE OFF)
   
 # timem installation
-install(TARGETS timem
-    DESTINATION ${TIMEMORY_INSTALL_BINDIR})
+install(TARGETS timem DESTINATION bin)
