--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -97,3 +97,23 @@ if(TIMEMORY_USE_CUPTI AND HAS_CUDA_cuda_LIBRARY)
                         timemory-cuda    timemory-cupti  # timemory-cudart-device
                         cupti-compile-options)
 endif()
+
+if(_HAS_PROFILER)
+    add_googletest(gperf_cpu_tests
+        SOURCES         gperf_cpu_tests.cpp
+        LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-gperftools-cpu
+        ENVIRONMENT     "CPUPROFILE_FREQUENCY=1000;CPUPROFILE_REALTIME=1")
+endif()
+
+add_googletest(gperf_fake_cpu_tests
+    DISCOVER_TESTS
+    SOURCES         gperf_cpu_tests.cpp
+    LINK_LIBRARIES  timemory-headers)
+
+if(_HAS_TCMALLOC)
+    add_googletest(gperf_heap_tests
+        DISCOVER_TESTS
+        SOURCES         gperf_heap_tests.cpp
+        LINK_LIBRARIES  timemory-headers    timemory-arch   timemory-compile-options
+                        timemory-gperftools-heap)
+endif()
